# BRIGHT

cvprw26_paddle/: README.md  infer.sh  pyproject.toml  test.sh  train.sh
cvprw26_paddle/config/: disaster.yaml
cvprw26_paddle/src/: engine.py  eval.py  infer.py  infer_utils.py  train.py  utils.py
cvprw26_paddle/src/dataset/: classes.py  data.py
cvprw26_paddle/src/model/: mask_rcnn.py
